src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>New_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Invoice Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>